working slider and gallery switch

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="nav-tab_container">
             <ul class="nav-tab_list">
                 <li class="nav-tab_list-item">
-                    <a href="#" class="nav-tab_link">DOGS</a>
+                    <a href="#" data-gallery="dogs" class="nav-tab_link">DOGS</a>
                 </li>
                 <li class="nav-tab_list-item">
-                    <a href="#" class="nav-tab_link">CATS</a>
+                    <a href="#" data-gallery="cats" class="nav-tab_link">CATS</a>
                 </li>
                 <li class="nav-tab_list-item">
-                    <a href="#" class="nav-tab_link">MICE</a>
+                    <a href="#" data-gallery="mice" class="nav-tab_link">MICE</a>
                 </li>
                 <li class="nav-tab_list-item">
                     <a href="#" class="nav-tab_link">EMPTY</a>
@@ -51,7 +51,7 @@
 
         <!-- picture container/gallery -->
         <div class="gallery_wrapper">
-            <div class="gallery_container gallery_dog">
+            <div class="gallery_container gallery_dogs">
                 <div class="gallery_item">
                     <img src="http://loremflickr.com/600/400/?random=dog1">
                 </div>
@@ -61,47 +61,29 @@
                 <div class="gallery_item">
                     <img src="http://loremflickr.com/600/400/?random=dog3">
                 </div>
+            </div>
+            <div class="gallery_container gallery_cats">
                 <div class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=dog4">
+                    <img src="http://loremflickr.com/600/400/?random=cat1">
                 </div>
                 <div class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=dog5">
+                    <img src="http://loremflickr.com/600/400/?random=cat2">
+                </div>
+                <div class="gallery_item">
+                    <img src="http://loremflickr.com/600/400/?random=cat3">
                 </div>
             </div>
-            <ul class="gallery_container gallery_cat">
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=cat1">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=cat2">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=cat3">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=cat4">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=cat5">
-                </li>
-            </ul>
-            <ul class="gallery_container gallery_mouse">
-                <li class="gallery_item">
+            <div class="gallery_container gallery_mice">
+                <div class="gallery_item">
                     <img src="http://loremflickr.com/600/400/?random=mouse1">
-                </li>
-                <li class="gallery_item">
+                </div>
+                <div class="gallery_item">
                     <img src="http://loremflickr.com/600/400/?random=mouse2">
-                </li>
-                <li class="gallery_item">
+                </div>
+                <div class="gallery_item">
                     <img src="http://loremflickr.com/600/400/?random=mouse3">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=mouse4">
-                </li>
-                <li class="gallery_item">
-                    <img src="http://loremflickr.com/600/400/?random=mouse5">
-                </li>
-            </ul>
+                </div>
+            </div>
         </div>
     </body>
 </html>
