added go to function

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
         <div class="nav-tab_container">
             <ul class="nav-tab_list">
                 <li class="nav-tab_list-item">
-                    <a href="#" data-gallery="dogs" class="nav-tab_link">DOGS</a>
+                    <a href="#" data-gallery="gallery_dogs" class="nav-tab_link">DOGS</a>
                 </li>
                 <li class="nav-tab_list-item">
-                    <a href="#" data-gallery="cats" class="nav-tab_link">CATS</a>
+                    <a href="#" data-gallery="gallery_cats" class="nav-tab_link">CATS</a>
                 </li>
                 <li class="nav-tab_list-item">
-                    <a href="#" data-gallery="mice" class="nav-tab_link">MICE</a>
+                    <a href="#" data-gallery="gallery_mice" class="nav-tab_link">MICE</a>
                 </li>
                 <li class="nav-tab_list-item">
                     <a href="#" class="nav-tab_link">EMPTY</a>
@@ -52,35 +52,35 @@
         <!-- picture container/gallery -->
         <div class="gallery_wrapper">
             <div class="gallery_container gallery_dogs">
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="0">
                     <img src="http://loremflickr.com/600/400/?random=dog1">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="1">
                     <img src="http://loremflickr.com/600/400/?random=dog2">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="2">
                     <img src="http://loremflickr.com/600/400/?random=dog3">
                 </div>
             </div>
             <div class="gallery_container gallery_cats">
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="0">
                     <img src="http://loremflickr.com/600/400/?random=cat1">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="1">
                     <img src="http://loremflickr.com/600/400/?random=cat2">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="2">
                     <img src="http://loremflickr.com/600/400/?random=cat3">
                 </div>
             </div>
             <div class="gallery_container gallery_mice">
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="0">
                     <img src="http://loremflickr.com/600/400/?random=mouse1">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="1">
                     <img src="http://loremflickr.com/600/400/?random=mouse2">
                 </div>
-                <div class="gallery_item">
+                <div class="gallery_item" data-slide-number="2">
                     <img src="http://loremflickr.com/600/400/?random=mouse3">
                 </div>
             </div>
